--- a/index.html
+++ b/index.html
@@ -390,7 +390,9 @@
                 </div>
             </div>
         </section>
+        <!-- Contact-section-End -->
     </main>
+    <!-- Footer-section-Started -->
     <footer id="footer-wrap" class="mt-5 pt-5 bg-1st-color">
         <div class="container py-5">
             <div class="row">
@@ -435,6 +437,7 @@
             <p>&copy; Copyright Reveal. All Rights Reserved</p>
         </div>
     </footer>
+    <!-- Footer-section-Started -->
     <!-- BootStrap-js-cdn-files -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
